--- a/style.css
+++ b/style.css
@@ -42,26 +42,6 @@ h1 {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
 
 button {
   border-radius: 8px;
@@ -86,4 +66,5 @@ button:focus-visible {
 .tilting-word{
   font-size: 50px;
   font-weight: 600;
+  transition: filter 0.1s, transform 0.1s;
 }
